# moq-demos

./: .gitignore  Justfile  README.md
demos/map-coordinates/: Justfile  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
demos/map-coordinates/docs/: decode-packet-fix.md
demos/map-coordinates/src/: avatars.ts  login.ts  main.ts  nostr.ts  parsers.ts  players.ts  render.ts  types.ts  utils.ts  zones.ts
demos/map-coordinates/src/audio/: capture.ts  packets.test.ts  packets.ts  playback.ts
demos/map-coordinates/tests/e2e/: map-coordinates.spec.ts
demos/neet/: Cargo.toml  PLAN.md  README.md
demos/neet/src/: audio.rs  codec.rs  main.rs  media.rs  moq.rs
demos/neet/src/audio/: capture.rs  device.rs  playback.rs  processor.rs
demos/neet/src/codec/: opus.rs
