[package]
name = "neet-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio-processing"]
audio-processing = ["webrtc-audio-processing"]

[dependencies]
anyhow = "1.0.96"
audio_thread_priority = "0.33.0"
bytes = "1.10.0"
clap = { version = "4.5.16", features = ["derive"] }
cpal = { version = "0.15.3" }
dasp_sample = "0.11.0"
fixed-resample = "0.6.1"
ringbuf = "0.4.7"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
derive_more = { version = "2.0.1", features = ["debug"] }
spin_sleep = "1.3.0"
opus = { git = "https://github.com/DCNick3/opus-rs.git", branch = "unsafe-libopus", default-features = false, features = ["unsafe-libopus-backend"] }

moq-lite = "0.7"
moq-native = "0.8"

webrtc-audio-processing = { version = "0.4.0", optional = true, default-features = false, features = ["bundled", "derive_serde"] }

[dev-dependencies]
anyhow = "1.0.96"
tracing-test = "0.2.5"

[profile.release]
opt-level = 3
